# ros2_tracing_cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
scripts/: helpers.py  process_callback_duration.ipynb  process_memory_usage.ipynb
src/: callback_duration.cpp  callback_duration.hpp  memory_usage.cpp  memory_usage.hpp  plugin.cpp
